   
===========
Changes log  
===========

@version-full@ (@release-date@)

- 2.3.4 (07/16/2015)
    - Bugs fixed
       - LOCK and UNLOCK methods are not safe. Issue #1112.
         Reported by Zsolt Szloboda.
       - Fixed APISpark introspection when application name is not set.

- 2.3.3 (06/21/2015)
    - Bugs fixed
       - Redirector does not translate response's entity location reference.
         Issue #1069.
       - Fixed tunnelFilter. + symbol (%2b) converted incorrectly when media 
         query parameter is used. Issue #804.
         Reported by Rob Elsner.
       - Fixed never ending call when an exception happens while writing the 
         response's entity using the internal HTTP server connector.
         Issue #1061. Reported by Gernot Pansy.
       - Prevented insertion of query params into POST request for JAX-RS client.
         Issue #1072. Reported by Edouard Mercier.
       - Fixed NPE when OAuth refresh token request when no scope is provided. 
         Issue #1080. Reported by Gernot Pansy.
       - Internal HTTP client doesn't fail anymore with null values in headers.
       - Improved robustness of Swagger translation code (import/export).
       - Fixed security scheme issue in RAML translator.
       
    - Enhancements
       - Allowed spaces in the values of the Java methods annotations. Issue #1099.
       - Added support for Chromium browser when extracting user agent info.
       - Added Swagger 2.0 import support in Swagger and APISPark extensions.

- 2.3.2 (05/01/2015)
    - Bugs fixed
       - Fix CORS header name Access-Control-Allow-Credentials. Issue #1030.
       - Fixed malformed JSON in the JsonpRepresentation.
         Reported by Wagner Correa Ramos.
       - When catching a 405 status, make sure to update allowed methods inside 
         a ServerResource. Issue #1034.
         Reported by Jeremy Gustie.
       - Fixed wrong Reference.getRemainingPart(boolean decode). Issue #1041.
         Reported by Tal Liron.